# mcp-maintenance-assistence

./: .gitignore
infra/docker/: docker-compose.yml
server/: pyproject.toml  read_pdf.py
server/modules/: reading_pdf.py
